# Bank

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
BaseLibrary/: CMakeLists.txt
BaseLibrary/BDate/: CMakeLists.txt
BaseLibrary/BString/: CMakeLists.txt
BaseLibrary/BString/include/BString/: BString.hpp
BaseLibrary/BString/src/: BString.cpp
BaseLibrary/include/: BString.hpp
BaseLibrary/src/: BString.cpp
Launcher/: CMakeLists.txt  Launcher.cpp
Services/: CMakeLists.txt
Services/Logger/: CMakeLists.txt
Services/Logger/include/Log/: logger.h
Services/Logger/include/Logger/: ConcreteDecorators.hpp  ConcreteText.hpp  Core.hpp  Decorator.hpp  Logger.hpp  Message.hpp
Services/Logger/include/Logger/Core/: Core.hpp  Message.hpp
Services/Logger/src/: ConcreteDecorators.cpp  ConcreteText.cpp  Core.cpp  Message.cpp  logger.cpp
Services/Logger/src/Core/: Core.cpp  Message.cpp
Tests/: CMakeLists.txt  mainTests.cpp
Tests/BaseLibraryTests/: BStringTests.hpp
Tests/EmptyTest/: CMakeLists.txt
therdparty/: CMakeLists.txt
therdparty/json/: CMakeLists.txt
